--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+  
+        <div class="container"></div>
+       
+        <div class="logo">
+            <img src="" alt="img/logo.png">
+
+        <div class="navegacion">
+        <a href="Inicio"></a>
+        <a href="Mi experiencia"></a>
+        <a href="Contactenos"></a>
+        <a href="Mis proyectos"></a>
+        <a href="Acerca de"></a>
+
+    </header>
 </body>
 </html>
