Terminacion de Mi Pagina Web (Laboratorio 2)

--- a/index.html
+++ b/index.html
@@ -3,24 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Mi Proyecto</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header class="header">
-  
-        <div class="container"></div>
+    <header class="header">  
+        <div class="container">
        
         <div class="logo">
-            <img src="" alt="img/logo.png">
+            <img src="img/Logo2.png">
+        </div>
 
         <div class="navegacion">
-        <a href="Inicio"></a>
-        <a href="Mi experiencia"></a>
-        <a href="Contactenos"></a>
-        <a href="Mis proyectos"></a>
-        <a href="Acerca de"></a>
-
+            <a href="#">Inicio</a>
+            <a href="#">Mi experiencia</a>
+            <a href="#">Mis proyectos</a>
+            <a href="#">Acerca de</a> 
+            <a href="#">Contactenos</a>
+        </div>
+    
+    </div>
     </header>
+    <section class="hero padre">
+            <div class="capa">
+
+
+</div>
+
+<div class="presentation">
+
+<h1>Mi proyecto</h1>
+<P>Mi viaje en el mundo de la programación web comenzó con un objetivo claro: crear un portafolio digital que no solo mostrara mis habilidades técnicas emergentes, sino también contara mi historia personal de aprendizaje. El proyecto nació de la necesidad de comprender cómo las líneas de código pueden transformarse en experiencias visuales y funcionales en internet.
+La primera etapa del desarrollo se centró en HTML, donde aprendí a estructurar contenido de manera semántica. Cada etiqueta representaba una pieza de mi identidad profesional: encabezados para mis datos personales, secciones para mis proyectos y párrafos que narraban mi trayectoria de aprendizaje. Comprendí rápidamente que HTML no es solo un lenguaje de marcado, sino un lienzo donde se pinta la narrativa digital.</P>
+<P>Con CSS, descubrí el poder del diseño y la estética web. Experimenté con selectores, propiedades de estilo y layouts responsive que permitían que mi portafolio se adaptara elegantemente a diferentes dispositivos. Los colores, márgenes y tipografías se convirtieron en mis herramientas para crear una experiencia visual coherente y atractiva. Cada regla de estilo era un paso más hacia la comprensión de cómo el diseño web puede comunicar emociones y profesionalismo.</P>
+<P>JavaScript agregó la capa de interactividad que transformó mi sitio de una simple página estática a una experiencia dinámica. Implementé funcionalidades como un carrusel de proyectos, filtros interactivos y transiciones suaves entre secciones. Cada función de JavaScript representaba un desafío técnico que me permitía expandir mis habilidades y comprender los fundamentos de la programación front-end.</P>
+<P>El proceso de desarrollo fue más allá del código: fue un viaje de autodescubrimiento y aprendizaje continuo. Cada error me enseñó algo nuevo, cada desafío técnico fortaleció mi resolución. El portafolio se convirtió en un testimonio vivo de mi progresión como desarrollador web, documentando no solo mis proyectos, sino mi capacidad de aprender, adaptarme y crear.</P>
+<button class="btn"> Conoce mas</button>
+</div>
+
+ </div>
+
+
+</section>
+
+    </div>
+
+    <footer>
+        <p>Autor: HENRY JOSEPH VEGA OÑATE &copy; </p>
+    </footer>
+
 </body>
 </html>
